Split GitHub action into 2, update README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Continuous Integration
 
 on:
   push:
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  validate:
-    name: Validate
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -20,40 +20,11 @@ jobs:
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v4
+
+      - name: Build
+        run: |
+          dotnet build
 
       - name: Run Tests
         run: |
           dotnet test
-
-  generate:
-    name: Generate
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
-          submodules: true
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v4
-
-      - name: Clone bicep-types-az
-        uses: actions/checkout@v4
-        with:
-          repository: Azure/bicep-types-az
-          path: workflow-temp/bicep-types-az
-
-      - name: Run Generation
-        run: |
-          mkdir -p "$RUNNER_TEMP/generated"
-          dotnet run --project ./src/TemplateRefGenerator \
-            --source-folder workflow-temp/bicep-types-az/generated \
-            --output-folder "$RUNNER_TEMP/generated" \
-            --verbose
-
-      - name: Upload Generated
-        uses: actions/upload-artifact@v4
-        with:
-          name: generated
-          path: ${{ runner.temp }}/generated
