--- a/src/TemplateRefGenerator/Files/config/config.json
+++ b/src/TemplateRefGenerator/Files/config/config.json
@@ -102,8 +102,8 @@
     "microsoft.media": "Media",
     "microsoft.migrate": "Migrate",
     "microsoft.mixedreality": "Mixed Reality",
-    "microsoft.alertsmanagement": ": Alerts Management",
-    "microsoft.insights": ": Insights",
+    "microsoft.alertsmanagement": "Alerts Management",
+    "microsoft.insights": "Insights",
     "microsoft.dbformysql": "MySQL",
     "microsoft.netapp": "NetApp",
     "microsoft.network": "Network",
