Update TOC title mapping (#85)
Co-authored-by: Anthony Martin <38542602+anthony-c-martin@users.noreply.github.com>

--- a/settings/config/config.json
+++ b/settings/config/config.json
@@ -19,12 +19,15 @@
     "microsoft.automation": "Automation",
     "microsoft.awsconnector": "AWS Connector",
     "microsoft.azureactivedirectory": "Azure AD B2C",
+    "microsoft.agricultureplatform": "Azure Agriculture Platform",
     "microsoft.connectedvmwarevsphere": "Azure Arc Connected VMware vSphere",
     "microsoft.azurearcdata": "Azure Arc Data",
     "microsoft.scvmm": "Azure Arc Enabled SCVMM",
     "microsoft.blueprint": "Azure Blueprints",
     "microsoft.azuredata": "Azure Data",
     "microsoft.azuredatatransfer": "Azure Data Transfer",
+    "microsoft.databasefleetmanager": "Azure Database Fleet Manager",
+    "microsoft.dependencymap": "Azure Dependencymap",
     "microsoft.digitaltwins": "Azure Digital Twins",
     "microsoft.agfoodplatform": "Azure FarmBeats",
     "microsoft.azurefleet": "Azure Fleet",
@@ -39,6 +42,7 @@
     "microsoft.appplatform": "Azure Spring Apps",
     "microsoft.azurestack": "Azure Stack",
     "microsoft.azurestackhci": "Azure Stack HCI",
+    "microsoft.storageactions": "Azure Storage Actions",
     "microsoft.avs": "Azure VMware Solution",
     "microsoft.baremetalinfrastructure": "Baremetal Infrastructure",
     "microsoft.batch": "Batch",
@@ -50,6 +54,8 @@
     "microsoft.certificateregistration": "Certificate Registration",
     "microsoft.changeanalysis": "Change Analysis",
     "microsoft.chaos": "Chaos Studio",
+    "microsoft.manufacturingplatform": "Cloud for Manufacturing",
+    "microsoft.sovereign": "Cloud for Sovereignty",
     "microsoft.codesigning": "Codesigning",
     "microsoft.cognitiveservices": "Cognitive Services",
     "microsoft.communication": "Communication Services",
@@ -94,6 +100,7 @@
     "microsoft.devtestlab": "DevTest Labs",
     "microsoft.domainregistration": "Domain Registration",
     "microsoft.durabletask": "Durable Task",
+    "microsoft.dynamics365fraudprotection": "Dynamics 365 Fraud Protection",
     "dynatrace.observability": "Dynatrace",
     "microsoft.easm": "Easm",
     "microsoft.edge": "Edge",
@@ -107,6 +114,7 @@
     "microsoft.enterpriseknowledgegraph": "Enterprise Knowledge Graph",
     "microsoft.eventgrid": "Event Grid",
     "microsoft.eventhub": "Event Hub",
+    "microsoft.onlineexperimentation": "Experimentation Platform",
     "microsoft.extendedlocation": "Extended Location",
     "microsoft.fabric": "Fabric",
     "microsoft.features": "Features",
@@ -159,11 +167,14 @@
     "microsoft.marketplace": "Marketplace",
     "microsoft.marketplaceordering": "Marketplace Ordering",
     "microsoft.media": "Media",
+    "Microsoft.m365securityandcompliance": "Microsoft 365 Security and Compliance",
     "microsoft.migrate": "Migrate",
     "microsoft.mixedreality": "Mixed Reality",
+    "microsoft.monitor": "Monitor",
     "microsoft.alertsmanagement": "Alerts Management",
     "microsoft.insights": "Insights",
     "microsoft.dbformysql": "MySQL",
+    "microsoft.mysqldiscovery": "MySQL Discovery",
     "neon.postgres": "Neon Postgres",
     "microsoft.netapp": "NetApp",
     "microsoft.network": "Network",
@@ -244,6 +255,7 @@
     "microsoft.vmwarecloudsimple": "VMWare CloudSimple",
     "microsoft.voiceservices": "Voice Services",
     "microsoft.web": "Web",
+    "microsoft.weightsandbiases": "Weights and Biases",
     "microsoft.windowsesu": "Windows ESU",
     "microsoft.windowsiot": "Windows IoT",
     "microsoft.workloadmonitor": "Workload Monitor",
