Seeing how the tests pass now (probably excessive changes made)

--- a/src/TemplateRefGenerator.Tests/TemplateRefGenerator.Tests.csproj
+++ b/src/TemplateRefGenerator.Tests/TemplateRefGenerator.Tests.csproj
@@ -6,6 +6,9 @@
     <!-- More info about dotnet test integration https://learn.microsoft.com/dotnet/core/testing/unit-testing-platform-integration-dotnet-test -->
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+    <!-- Configure for ARM64 architecture -->
+    <RuntimeIdentifier>win-arm64</RuntimeIdentifier>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
