--- a/src/TemplateRefGenerator/TemplateRefGenerator.csproj
+++ b/src/TemplateRefGenerator/TemplateRefGenerator.csproj
@@ -3,6 +3,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <!-- Configure for ARM64 architecture -->
+    <RuntimeIdentifier>win-arm64</RuntimeIdentifier>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
