--- a/src/TestHelpers/TestHelpers.csproj
+++ b/src/TestHelpers/TestHelpers.csproj
@@ -2,6 +2,9 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <!-- Configure for ARM64 architecture -->
+    <RuntimeIdentifier>win-arm64</RuntimeIdentifier>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
