Migrate to .NET 9

--- a/src/TemplateRefGenerator.Tests/TemplateRefGenerator.Tests.csproj
+++ b/src/TemplateRefGenerator.Tests/TemplateRefGenerator.Tests.csproj
@@ -1,7 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Nullable>Enable</Nullable>
-    <TargetFramework>net8.0</TargetFramework>
     <EnableMSTestRunner>true</EnableMSTestRunner>
     <!-- More info about dotnet test integration https://learn.microsoft.com/dotnet/core/testing/unit-testing-platform-integration-dotnet-test -->
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
@@ -14,14 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-    <PackageReference Include="MSTest" Version="3.10.2" />
-    <PackageReference Include="Azure.Bicep.Types.Az" Version="0.2.727" />
+    <PackageReference Include="MSTest" />
+    <PackageReference Include="Azure.Bicep.Types.Az" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../TemplateRefGenerator/TemplateRefGenerator.csproj" />
-    <ProjectReference Include="../TestHelpers/TestHelpers.csproj" />
   </ItemGroup>
 </Project>
