--- a/src/TemplateRefGenerator/TemplateRefGenerator.csproj
+++ b/src/TemplateRefGenerator/TemplateRefGenerator.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,8 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="Azure.Bicep.Types" Version="0.5.110" />
-    <PackageReference Include="System.IO.Abstractions" Version="22.0.14" />
+    <PackageReference Include="CommandLineParser" />
+    <PackageReference Include="Azure.Bicep.Types" />
+    <PackageReference Include="System.IO.Abstractions" />
+    <PackageReference Include="Azure.Deployments.Testing.Utilities" />
   </ItemGroup>
 </Project>
