Support Terraform samples

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -11,6 +11,7 @@
     <PackageVersion Include="Azure.Bicep.Types" Version="0.5.110" />
     <PackageVersion Include="Azure.Bicep.Types.Az" Version="0.2.727" />
     <PackageVersion Include="Azure.Deployments.Testing.Utilities" Version="1.473.0" />
+    <PackageVersion Include="Microsoft.PowerPlatform.ResourceStack" Version="7.0.0.2076" />
     <PackageVersion Include="CommandLineParser" Version="2.9.1" />
     <PackageVersion Include="MSTest" Version="3.10.2" />
     <PackageVersion Include="System.IO.Abstractions" Version="22.0.14" />
